testdata/corset/valid/shift_02.lisp
(defcolumns (X :i16))
(defconstraint c1 () (== 0 (shift X -1)))
