testdata/corset/invalid/computedcolumn_invalid_04.lisp
;;error:3:1-29:malformed declaration
(defcolumns (X :i16))
(defcomputedcolumn Y == X 1)
